--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,3 @@
 exportPattern("^[[:alpha:]]+")
-import(Zelig, ZeligChoice, ggplot2, data.table, xtable, stringr)
+import(Zelig, ZeligChoice, ggplot2, data.table, xtable, stringr, car)
 
